# wprdf

./: .env.example  .gitignore  compose.yml  readme.md
dev/: populate_db.py  reset_db.sh  start.sh
server/: Dockerfile  pyproject.toml  setup_marimo_wasm.sh
server/notebook_templates/: excel2wprdf.py  json2wprdf.py  merge_wprdf.py  wprdf_orchestrator.py  wprdf_template.py
server/static/: index.html  wprdf.js
server/static/notebooks/: excel2wprdf.py
server/wasm_injections/: wprdf-ui.html  wprdf.css  wprdf.js
server/wprdf_server/: main.py
static/: wprdf_template.py
